parse/src/snapshots/ninja_parse__parser_test__build_no_bindings-2.snap
---
source: parse/src/lib.rs
expression: ast
---
Description {
    rules: [
        Rule {
            name: [
                116,
                111,
                117,
                99,
                104,
            ],
            command: Expr(
                [
                    Literal(
                        [
                            116,
                            111,
                            117,
                            99,
                            104,
                        ],
                    ),
                ],
            ),
        },
    ],
    builds: [
        Build {
            rule: [
                116,
                111,
                117,
                99,
                104,
            ],
            inputs: [],
            outputs: [
                Expr(
                    [
                        Literal(
                            [
                                102,
                                111,
                                111,
                                46,
                                111,
                            ],
                        ),
                    ],
                ),
                Expr(
                    [
                        Literal(
                            [
                                102,
                                111,
                                111,
                                46,
                                112,
                            ],
                        ),
                    ],
                ),
            ],
        },
    ],
}
