parse/src/snapshots/ninja_parse__parser_test__build_no_bindings-3.snap
---
source: parse/src/lib.rs
expression: ast
---
Description {
    rules: [
        Rule {
            name: [
                116,
                111,
                117,
                99,
                104,
            ],
            command: [
                116,
                111,
                117,
                99,
                104,
            ],
        },
    ],
    builds: [
        Build {
            rule: [
                116,
                111,
                117,
                99,
                104,
            ],
            inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
                [
                    102,
                    111,
                    111,
                    46,
                    112,
                ],
                [
                    102,
                    111,
                    111,
                    46,
                    113,
                ],
            ],
        },
    ],
}
