parse/src/snapshots/ninja_parse__parser_test__build_no_bindings-4.snap
---
source: parse/src/lib.rs
expression: ast
---
Description {
    bindings: RefCell {
        value: Env {
            parent: None,
            bindings: {},
        },
    },
    rules: [
        Rule {
            name: [
                116,
                111,
                117,
                99,
                104,
            ],
            bindings: {
                [
                    99,
                    111,
                    109,
                    109,
                    97,
                    110,
                    100,
                ]: Expr(
                    [
                        Literal(
                            [
                                116,
                                111,
                                117,
                                99,
                                104,
                            ],
                        ),
                    ],
                ),
            },
        },
    ],
    builds: [
        Build {
            rule: [
                116,
                111,
                117,
                99,
                104,
            ],
            inputs: [
                Expr(
                    [
                        Literal(
                            [
                                105,
                                110,
                                112,
                                49,
                            ],
                        ),
                    ],
                ),
                Expr(
                    [
                        Literal(
                            [
                                105,
                                110,
                                112,
                                50,
                            ],
                        ),
                    ],
                ),
            ],
            outputs: [
                Expr(
                    [
                        Literal(
                            [
                                102,
                                111,
                                111,
                                46,
                                111,
                            ],
                        ),
                    ],
                ),
                Expr(
                    [
                        Literal(
                            [
                                102,
                                111,
                                111,
                                46,
                                112,
                            ],
                        ),
                    ],
                ),
            ],
        },
    ],
    includes: [],
}
