parse/src/snapshots/ninja_parse__parser_test__build_no_bindings-6.snap
---
source: parse/src/lib.rs
expression: ast
---
Description {
    rules: [
        Rule {
            name: [
                116,
                111,
                117,
                99,
                104,
            ],
            command: Expr(
                [
                    Literal(
                        [
                            116,
                            111,
                            117,
                            99,
                            104,
                        ],
                    ),
                ],
            ),
        },
        Rule {
            name: [
                111,
                116,
                104,
                101,
                114,
            ],
            command: Expr(
                [
                    Literal(
                        [
                            103,
                            99,
                            99,
                        ],
                    ),
                ],
            ),
        },
    ],
    builds: [
        Build {
            rule: [
                116,
                111,
                117,
                99,
                104,
            ],
            inputs: [
                [
                    105,
                    110,
                    112,
                    49,
                ],
                [
                    105,
                    110,
                    112,
                    50,
                ],
            ],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
                [
                    102,
                    111,
                    111,
                    46,
                    112,
                ],
            ],
        },
    ],
}
