parse/src/snapshots/ninja_parse__parser_test__simple.snap
---
source: parse/src/lib.rs
expression: ast
---
Description {
    rules: [
        Rule {
            name: [
                99,
                99,
            ],
            command: Expr(
                [
                    Literal(
                        [
                            103,
                            99,
                            99,
                            32,
                            45,
                            99,
                            32,
                            102,
                            111,
                            111,
                            46,
                            99,
                        ],
                    ),
                ],
            ),
        },
    ],
    builds: [
        Build {
            rule: [
                99,
                99,
            ],
            inputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    99,
                ],
            ],
            outputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    111,
                ],
            ],
        },
    ],
}
